--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,328 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "font-awesome";
+
+ //---------Navbar---------
+
+ .navbar-default {
+     background-color: #212121; /** narbar的背景色 **/
+     border-color: #212121;   /** narbar的边框颜色 **/
+     border-radius: 0;    /** narbar的边框圆角度 **/
+     letter-spacing: 3px;
+     opacity: 0.9;
+     height: 70px;
+ }
+
+ .nav1 {
+   margin-top: 7px;
+ }
+
+ .navbar-default .navbar-brand {
+     color: #FFC117;  /** 调整网站图标和字体颜色 **/
+     padding: 0px 15px;
+     line-height: 50px;
+     font-size: 25px;  /** 调整网站图标和字体大小 **/
+ }
+
+ .navbar-default .navbar-brand:hover,
+ .navbar-default .navbar-brand:focus {
+     color: #FFC117;   /** 鼠标放在图标上，网站图标和字体颜色 **/
+     background-color: transparent;  /** 鼠标放在图标上，网站图标和字体的背景色 **/
+ }
+
+ .navbar-default .navbar-nav > li > a {
+     color: #DBD5DA;
+     font-size: 21px;  /** 没点击的情况下，链接的背景色和链接字体大小 **/
+ }
+
+ .navbar-default .navbar-nav > li > a:hover,
+ .navbar-default .navbar-nav > li > a:focus {
+     color: white;
+     background-color: transparent;
+ }
+
+ .navbar-default .navbar-nav > .active > a,
+ .navbar-default .navbar-nav > .active > a:hover,
+ .navbar-default .navbar-nav > .active > a:focus {
+     color: #FF6F00;
+     background-color: #FFE0B2;
+ }
+
+ .navbar-default .navbar-nav > .open > a,
+ .navbar-default .navbar-nav > .open > a:focus,
+ .navbar-default .navbar-nav > .open > a:hover {
+     background-color: #212121;
+     color: #B3E5FC;
+ }
+
+ .dropdown-menu {
+ 	min-width: 180px;
+ }
+
+ .dropdown-menu  li a {
+ 	padding: 5px 15px 5px 37px;
+ 	font-weight: 300;
+ }
+
+ .dropdown-menu li a:hover {
+ 	color: #C2185B;
+ }
+
+#search-id {
+  width: 250px;
+  margin-top: 8px;
+  margin-left: 50px;
+}
+
+ /* Search.html.erb */
+
+// .jobs-show0 {
+//   border-bottom: 1px dotted #CCC;
+//   padding-right: 15px;
+//   padding-left: 15px;
+//   padding-bottom: 15px;
+//   font-family: PingFangSC-Medium, Arial, Helvetica, sans-serif;
+// }
+
+.jobs-show {
+  border-bottom: 1px solid #CCC;
+  padding: 10px;
+  font-family: PingFangSC-Medium, Arial, Helvetica, sans-serif;
+}
+
+.search-info-title {
+  font-family: PingFangSC-Medium, Arial, Helvetica, sans-serif;
+  color: #0d6ded;
+  font-size: 20px;
+  text-align: center;
+}
+
+.job-table {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+
+
+ //---------Box---------
+
+ 	.box {
+ 	    background-image: url("header.jpg");
+ 	    background-repeat: no-repeat;
+ 	    background-size: cover;
+ 	    margin-bottom: -20px;
+      margin-top: -20px;
+
+ 	    .box-inner {
+ 	        padding-bottom: 15px;
+ 	        margin-top: 200px;
+ 	        margin-bottom: 150px;
+
+
+ 	    }
+
+ 	    .title {
+ 	        text-align: center;
+ 	        margin-bottom: 80px;
+          color: #FEFBFB;
+
+ 	    }
+
+ 	    .slogan {
+ 	        color: #FEFBFB;
+ 	        margin-top: 20px;
+ 	        margin-bottom: 50px;
+ 	        text-align: center;
+ 	        font-size: 50px;
+ 	        top: 12px;
+          width: 100%;
+ 	    }
+
+ 	    .lead {
+ 	        margin-bottom: 60px;
+ 	        text-align: center;
+ 	        color: white;
+ 	    }
+ 	}
+
+  //---------Content---------
+
+  	.content-section-a {
+  	    padding: 50px 0;
+  	    background-color: #f8f8f8;
+        margin-bottom: -20px;
+  	}
+
+  	.content-section-b {
+  	    padding: 50px 0;
+  	    border-top: 1px solid #e7e7e7;
+  	    border-bottom: 1px solid #e7e7e7;
+  	}
+
+  	.section-heading-spacer {
+  	    float: left;
+  	    width: 200px;
+  	    border-top: 3px solid #e7e7e7;
+  	}
+
+  	.section-heading {
+  	    margin-bottom: 30px;
+  	}
+
+  	.lead {
+  	    font-size: 18px;
+  	    font-weight: 400;
+  	}
+
+    //---------Footer---------
+
+    	footer {
+    	    color: white;
+    	}
+
+    	footer .footer-below {
+    	    padding: 25px 0;
+    	    background-color: #233140;
+          /** footer置底 **/
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          height: 80px;
+
+    	}
+
+      html {
+         position: relative;
+         min-height: 100%;
+       }
+
+       body {
+         /* Margin bottom by footer height */
+         margin-bottom: 100px;
+       }
+
+  //---------美化管理员后台工作列表表格样式---------
+
+      .custab{
+        border: 1px solid #ccc;
+
+        padding: 5px;
+        margin: 5% 0;
+        box-shadow: 3px 3px 2px #ccc;
+
+        transition: 0.5s;
+      }
+
+      .custab:hover{
+        box-shadow: 3px 3px 0px transparent;
+        transition: 0.5s;
+      }
+
+
+      /****** LOGIN MODAL ******/
+      .loginmodal-container {
+        padding: 30px;
+        max-width: 350px;
+        width: 100% !important;
+        background-color: #F7F7F7;
+        margin: 0 auto;
+        border-radius: 2px;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+        overflow: hidden;
+        font-family: roboto;
+      }
+
+      .loginmodal-container h1 {
+        text-align: center;
+        font-size: 1.8em;
+        font-family: roboto;
+      }
+
+      .loginmodal-container input[type=submit] {
+        width: 100%;
+        display: block;
+        margin-bottom: 10px;
+        position: relative;
+      }
+
+      .loginmodal-container input[type=text], input[type=password] {
+        height: 44px;
+        font-size: 16px;
+        width: 100%;
+        margin-bottom: 10px;
+        -webkit-appearance: none;
+        background: #fff;
+        border: 1px solid #d9d9d9;
+        border-top: 1px solid #c0c0c0;
+        /* border-radius: 2px; */
+        padding: 0 8px;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+      }
+
+      .loginmodal-container input[type=text]:hover, input[type=password]:hover {
+        border: 1px solid #b9b9b9;
+        border-top: 1px solid #a0a0a0;
+        -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+        -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+        box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+      }
+
+      .loginmodal {
+        text-align: center;
+        font-size: 14px;
+        font-family: 'Arial', sans-serif;
+        font-weight: 700;
+        height: 36px;
+        padding: 0 8px;
+      /* border-radius: 3px; */
+      /* -webkit-user-select: none;
+        user-select: none; */
+      }
+
+      .loginmodal-submit {
+        /* border: 1px solid #3079ed; */
+        border: 0px;
+        color: #fff;
+        text-shadow: 0 1px rgba(0,0,0,0.1);
+        background-color: #4d90fe;
+        padding: 17px 0px;
+        font-family: roboto;
+        font-size: 14px;
+        /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
+      }
+
+      .loginmodal-submit:hover {
+        /* border: 1px solid #2f5bb7; */
+        border: 0px;
+        text-shadow: 0 1px rgba(0,0,0,0.3);
+        background-color: #357ae8;
+        /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
+      }
+
+      .loginmodal-container a {
+        text-decoration: none;
+        color: #666;
+        font-weight: 400;
+        text-align: center;
+        display: inline-block;
+        opacity: 0.6;
+        transition: opacity ease 0.5s;
+      }
+
+      .login-help{
+        font-size: 12px;
+      }
+
+
+//------common-------
+
+.col-centered{
+  float: none;
+  margin: 0 auto;
+}
+
+.panel2 {
+  margin-top: -10px;
+  font-size: 18px;
+}
