--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-boldered">
+<table class="table table-boldered table-striped custab">
     <thead>
         <tr>
             <td>
@@ -35,17 +35,15 @@
         <td> <%= job.wage_lower_bound %> </td>
         <td> <%= job.wage_upper_bound %> </td>
         <td>
-            <%= link_to("Edit", edit_admin_job_path(job)) %>
-            |
-            <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
+          <%= link_to("Edit", edit_admin_job_path(job), :class => "btn btn-xs btn-info") %>
+          <%= link_to("Destroy", admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "Are you sure?" }) %>
 
-            |
-            <% if job.is_hidden %>
+          <% if job.is_hidden %>
 
-            <%= link_to("Publish", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-default") %>
-        <% else %>
-            <%= link_to("Hide", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-default") %>
-            <% end %>
+          <%= link_to("Publish", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-success") %>
+          <% else %>
+          <%= link_to("Hide", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-warning") %>
+          <% end %>
         </td>
         <td>
             <%= job.created_at %>
@@ -53,3 +51,5 @@
     </tr>
     <% end %>
 </table>
+
+<!-- table-striped custab 为美化管理员后台工作列表样式的类 -->
