--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,25 +1,45 @@
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
+    <div class="container-fluid nav1">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Job-Listing</a>
+            <a class="navbar-brand" href="/"><i class="fa fa-diamond" aria-hidden="true">真·24K Offer</i></a>
         </div>
 
+
         <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li>
+                <%= link_to("应征职位", jobs_path) %>
+              </li>
+              <li>
+                <div class="nav navbar-nav navbar-left">
+                  <%= form_tag search_jobs_path , :method => :get do %>
+                  <div class="input-group" id="search-id">
+                    <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="请输入职位信息">
+                    <div class="input-group-btn">
+                      <button class="btn btn-default" type="submit">
+                        <i class="glyphicon glyphicon-search"></i>
+                      </button>
+                    </div>
+                  </div>
+                  <% end %>
+                </div>
+              </li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
                 <% if !current_user %>
-                  <li><%= link_to("注册", new_user_registration_path) %> </li>
-                  <li><%= link_to("登录", new_user_session_path) %></li>
+                <li><a href="#" data-toggle="modal" data-target="#signup-modal"><i class="fa fa-user-plus" aria-hidden="true"></i> 注册</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#login-modal"><span class='glyphicon glyphicon-log-in'></span> 登录</a></li>
                 <% else %>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        Hi!, <%= current_user.email %>
+                        <i class="fa fa-user-circle-o" aria-hidden="true"></i> <%= current_user.email %>
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
                         <% if current_user.admin? %>
-                        <li> <%= link_to("Admin Panel", admin_jobs_path) %> </li>
+                        <li> <%= link_to("<span class='glyphicon glyphicon-user'></span> 管理员".html_safe, admin_jobs_path) %> </li>
                         <% end %>
-                        <li> <%= link_to("退出", destroy_user_session_path, method: :delete) %> </li>
+                        <li> <%= link_to("<span class='glyphicon glyphicon-log-out'></span> 退出".html_safe, destroy_user_session_path, method: :delete) %> </li>
                     </ul>
                   </li>
                 <% end %>
@@ -27,3 +47,42 @@
         </div>
     </div>
 </nav>
+
+<!-- 登录弹窗 -->
+<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <div class="loginmodal-container">
+       <h2>Log in</h2>
+       <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+         <div class="form-inputs">
+           <%= f.input :email, required: false, autofocus: true %>
+           <%= f.input :password, required: false %>
+           <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>
+         </div>
+         <div class="form-actions">
+           <%= f.button :submit, "Log in" %>
+         </div>
+       <% end %>
+    </div>
+  </div>
+</div>
+
+<!-- 注册弹窗 -->
+<div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+  <div class="modal-dialog">
+    <div class="loginmodal-container">
+      <h2>Sign up</h2>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
+        <div class="form-inputs">
+          <%= f.input :email, required: true, autofocus: true %>
+          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+          <%= f.input :password_confirmation, required: true %>
+        </div>
+        <div class="form-actions">
+            <%= f.button :submit, "Sign up" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
