--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,152 @@
-<h1> Hello World ! </h1>
+<div class='row'>
+ <div id="bootstrap-touch-slider" class=" carousel bs-slider slide  control-round indicators-line " data-ride="carousel" data-pause="hover" data-interval="5000" >
+
+   <!-- Indicators -->
+   <ol class="carousel-indicators ">
+       <li data-target="#bootstrap-touch-slider" data-slide-to="0" class="active"></li>
+       <li data-target="#bootstrap-touch-slider" data-slide-to="1"></li>
+       <li data-target="#bootstrap-touch-slider" data-slide-to="2"></li>
+   </ol>
+
+   <!-- Wrapper For Slides -->
+   <div class="carousel-inner " role="listbox">
+
+     <!-- Third Slide -->
+     <div class="item active">
+
+       <!-- Slide Background -->
+       <img src="https://www.cabionline.com/wp-content/uploads/2014/04/CareerTips_featured-image1.jpg" alt="Bootstrap Touch Slider"  class="slide-image"/>
+       <div class="bs-slider-overlay"></div>
+
+       <div class="container">
+         <div class="row">
+           <!-- Slide Text Layer -->
+           <div class="slide-text slide_style_center ">
+             <h1 data-animation="animated zoomInRight">真24K Offer </h1>
+             <p data-animation="animated fadeInLeft">真24K Offer 是一个提供高薪工作机会的程序员求职网站</p>
+             <a href="/jobs" target="_blank" class="btn btn-default btn-danger" data-animation="animated fadeInLeft">应聘工作</a>
+             <a href="/jobs/new"  class="btn btn-primary " data-animation="animated fadeInRight">发布工作</a>
+           </div>
+         </div>
+       </div>
+     </div>
+     <!-- End of Slide -->
+
+     <!-- Second Slide -->
+     <div class="item">
+
+       <!-- Slide Background -->
+       <img src="https://ww2.sinaimg.cn/large/006tNbRwgy1fca5s9o9a3j31kw11yhdt.jpg" alt="Bootstrap Touch Slider"  class="slide-image"/>
+       <div class="bs-slider-overlay"></div>
+       <!-- Slide Text Layer -->
+       <div class="slide-text slide_style_center">
+         <h1 data-animation="animated flipInX">真24K Offer </h1>
+         <p data-animation="animated lightSpeedIn">凭借自己的努力和天份也会变 Winner</p>
+         <a href="/jobs"  class="btn btn-default btn-danger" data-animation="animated fadeInLeft">应聘工作</a>
+         <a href="/jobs/new"  class="btn btn-primary btn-warning " data-animation="animated fadeInRight">发布工作</a>
+       </div>
+     </div>
+     <!-- End of Slide -->
+
+     <!-- Third Slide -->
+     <div class="item">
+
+         <!-- Slide Background -->
+         <img src="https://ww1.sinaimg.cn/large/006tNbRwgy1fca5wbyxt7j31kw11ye5h.jpg" alt="Bootstrap Touch Slider"  class="slide-image"/>
+         <div class="bs-slider-overlay"></div>
+         <!-- Slide Text Layer -->
+         <div class="slide-text slide_style_center">
+             <h1 data-animation="animated zoomInLeft">真24K Offer </h1>
+             <p data-animation="animated fadeInRight">积累 + 耐心 = 成功 </p>
+             <a href="/jobs"  class="btn btn-default btn-danger" data-animation="animated fadeInLeft">应聘工作</a>
+             <a href="/jobs/new"  class="btn btn-primary " data-animation="animated fadeInRight">发布工作</a>
+         </div>
+     </div>
+     <!-- End of Slide -->
+
+
+   </div><!-- End of Wrapper For Slides -->
+
+   <!-- Left Control -->
+   <a class="left carousel-control" href="#bootstrap-touch-slider" role="button" data-slide="prev">
+       <span class="fa fa-angle-left" aria-hidden="true"></span>
+       <span class="sr-only">Previous</span>
+   </a>
+
+   <!-- Right Control -->
+   <a class="right carousel-control" href="#bootstrap-touch-slider" role="button" data-slide="next">
+       <span class="fa fa-angle-right" aria-hidden="true"></span>
+       <span class="sr-only">Next</span>
+   </a>
+
+ </div> <!-- End  bootstrap-touch-slider Slider -->
+</div>
+
+
+  <div class="content-section-a">
+  	  <div class="container">
+  	    <div class="row">
+  	      <div class="col-lg-5 col-sm-6">
+  	        <hr class="section-heading-spacer">
+  	        <div class="clearfix"></div>
+  	        <h2 class="section-heading">找工作一定要带手机</h2>
+  	        <p class="lead">因为没带手机就不能联络公司</p>
+  	      </div>
+  	      <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+  	        <%= image_tag 'pic-1.jpg', class: 'img-responsive' %>
+  	      </div>
+  	    </div>
+  	  </div>
+  	</div>
+
+  	<div class="content-section-b">
+  	  <div class="container">
+  	    <div class="row">
+  	      <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+  	        <hr class="section-heading-spacer">
+  	        <div class="clearfix"></div>
+  	        <h2 class="section-heading">一定要把履历写好在投</h2>
+  	        <p class="lead">履历如果不会写就一定要多上网寻求帮助，例如  <a target="_blank" href="http://blog.niclin.tw">Nic 的 Blog</a>! 啦啦啦啦啦啦啦</p>
+  	      </div>
+  	      <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+  	        <%= image_tag 'pic-2.jpg', class: 'img-responsive' %>
+  	      </div>
+  	    </div>
+  	  </div>
+  	</div>
+
+  	<div class="content-section-a">
+  	  <div class="container">
+  	    <div class="row">
+  	      <div class="col-lg-5 col-sm-6">
+  	        <hr class="section-heading-spacer">
+  	        <div class="clearfix"></div>
+  	        <h2 class="section-heading">这是可以乱改的字<br>动手试试看吧</h2>
+  	        <p class="lead">魔改大赛可以参考<a target="_blank" href="https://forum.qzy.camp/">论坛资源</a></p>
+  	      </div>
+  	      <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+  	        <%= image_tag 'pic-3.jpg', class: 'img-responsive' %>
+  	      </div>
+  	    </div>
+  	  </div>
+  	</div>
+
+    <div class="col-md-12">
+    	  <div class="row box">
+    	    <div class="box-inner col-md-12 col-md-offset-0">
+    	      <!-- <h1 class="title">真24K Offer</h1> -->
+    	      <p class="slogan">理想工作成就人生梦想，高薪优质工作等你选
+    	      </p>
+    	      <p class="lead">
+    	        <%= link_to '马上应征', jobs_path, class: 'btn btn-success btn-lg' %>
+    	      </p>
+    	    </div>
+    	  </div>
+    	</div>
+
+    <script>
+    $(document).ready(function(){
+      // Initialize Tooltip
+      $('[data-toggle="tooltip"]').tooltip();
+    })
+    </script>
